--- a/curator.html
+++ b/curator.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Куратор - РПО1-24К</title>
-    <link rel="icon" href="C:\Users\User\Downloads\TEW2\logop.png" type="image/png">
+    <link rel="icon" href="images/logop.png" type="image/png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\User\Downloads\TEW2\site.css">
+    <link rel="stylesheet" href="site.css">
     <link rel="stylesheet" href="profile.css">
 </head>
 <body>
     <header class="bg-primary text-white py-4">
     <div class="container d-flex justify-content-between align-items-center">
         <h1 class="m-0">
-            <a href="C:\Users\User\Downloads\TEW2\home.html" class="text-white text-decoration-none">РПО1-24К</a> <!-- Добавлена ссылка на главную -->
+            <a href="home.html" class="text-white text-decoration-none">РПО1-24К</a> <!-- Добавлена ссылка на главную -->
         </h1>
         <nav>
             <ul class="navbar-nav d-flex flex-row">
-                <li class="nav-item me-4"><a class="nav-link text-white" href="C:\Users\User\Downloads\TEW2\home.html">Главная</a></li>
-                <li class="nav-item me-4"><a class="nav-link text-white" href="C:\Users\User\Downloads\TEW2\students.html">Студенты</a></li>
-                <li class="nav-item me-4"><a class="nav-link text-white" href="C:\Users\User\Downloads\TEW2\schedule.html">Расписание</a></li>
-                <li class="nav-item me-4"><a class="nav-link text-white" href="C:\Users\User\Downloads\TEW2\events.html">Достижении</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="C:\Users\User\Downloads\TEW2\about.html">О колледже</a></li>
+                <li class="nav-item me-4"><a class="nav-link text-white" href="home.html">Главная</a></li>
+                <li class="nav-item me-4"><a class="nav-link text-white" href="students.html">Студенты</a></li>
+                <li class="nav-item me-4"><a class="nav-link text-white" href="schedule.html">Расписание</a></li>
+                <li class="nav-item me-4"><a class="nav-link text-white" href="events.html">Достижении</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="about.html">О колледже</a></li>
             </ul>
         </nav>
     </div>
@@ -35,7 +35,7 @@
         <div class="profile-container">
             <!-- Фото профиля -->
             <div class="profile-photo">
-                <img src="C:\Users\User\Downloads\TEW2\images\kurator.png" alt="Profile Photo" id="profile-photo">
+                <img src="images/kurator.png" alt="Profile Photo" id="profile-photo">
             </div>
     
             <!-- Информация профиля -->
