--- a/schedule.html
+++ b/schedule.html
@@ -47,31 +47,31 @@
         <tbody>
             <tr>
                 <td class="editable">1</td>
-                <td class="editable">10:00</td>
-                <td class="editable">Математика, Физика</td>
-                <td class="editable">101, 102</td>
-                <td class="editable">Петров, Иванова</td>
+                <td class="editable">08:00-09:20</td>
+                <td class="editable">Информатика | Физика</td>
+                <td class="editable">504 | 307</td>
+                <td class="editable">Закенова А.О. | Оспанова Ж.Е.</td>
             </tr>
             <tr>
-                <td class="editable">1</td>
-                <td class="editable">10:00</td>
-                <td class="editable">Математика, Физика</td>
-                <td class="editable">101, 102</td>
-                <td class="editable">Петров, Иванова</td>
+                <td class="editable">2</td>
+                <td class="editable">09:30-10:50</td>
+                <td class="editable">Қазақстан тарихы</td>
+                <td class="editable">711</td>
+                <td class="editable">Бидашова Ш.О.</td>
             </tr>
             <tr>
-                <td class="editable">1</td>
-                <td class="editable">10:00</td>
-                <td class="editable">Математика, Физика</td>
-                <td class="editable">101, 102</td>
-                <td class="editable">Петров, Иванова</td>
+                <td class="editable">3</td>
+                <td class="editable">11:00-12:00</td>
+                <td class="editable">Қазақ әдебиеті | Қазақ тілі</td>
+                <td class="editable">302 | 308</td>
+                <td class="editable">Сүлейменова Г.Ж. | Рысбаева А.Қ.</td>
             </tr>
             <tr>
-                <td class="editable">1</td>
-                <td class="editable">10:00</td>
-                <td class="editable">Математика, Физика</td>
-                <td class="editable">101, 102</td>
-                <td class="editable">Петров, Иванова</td>
+                <td class="editable">4</td>
+                <td class="editable">12:30-13:50</td>
+                <td class="editable">Алғашқы әскери-технологиялық дайындық</td>
+                <td class="editable">719</td>
+                <td class="editable">Ахан А.Д.</td>
             </tr>
         </tbody>
     </table>
